Fix footer placement on mobile

--- a/style.css
+++ b/style.css
@@ -175,4 +175,16 @@ footer {
         font-family: customFont;
         font-size: 20px;
     }
+
+    footer {
+        position: absolute;
+        bottom: 3%;
+        left: 4%;
+        font-size: 18px;
+        display: flex;
+        align-items: left;
+        justify-content: left;
+        gap: 10px;
+        width: 100%;
+    }
   }
